User johns
Date:

    Fix bug: 100% cpu use with plugins like mp3.
    Wakeup display thread on channel switch, osd can now be shown without
    video.
    Makes 60Hz display mode configurable with setup.conf.
    Support downmix of AC-3 to stero.
    New audio PES packet parser.
    Fix bug: Grabbing a JPG image fails while suspended.
    Add support for hot keys.
    Add support to use characters input in edit mode.
    Adds trick speed support.

User johns
Date: Thu Feb 16 09:59:14 CET 2012

    Release Version 0.4.8
    Fix bug: wrong start of video packet.
    VDPAU: Enables inverse telecine configuration.
    Find AC3 (Dolby Digital) inside PES packet.
    Fix bug: audio increments invalid audio PTS.
    Fix bug: dvd plugin not working.
    Fix bug: used frame-> instead of video_ctx-> for old libav/ffmpeg.

User johns
Date: Mon Feb 13 23:20:26 CET 2012

    Release Version 0.4.7

User FireFly
Date: Mon Feb 13 20:14:11 CET 2012

    Fix bug: unscaled jpeg includes PNG header.

User johns
Date: Mon Feb 13 14:58:26 CET 2012

    VDPAU: Studio levels could be configured in the setup menu.
    Window size defaults to fullscreen, if no geometry is given.

User m.Rcu
Date: Sun Feb 12 20:28:22 CET 2012

    Jpeg screengrab use VDR RgbToJpeg function.

User johns
Date: Sun Feb 12 20:14:43 CET 2012

    Add play/pause audio support.
    Fix bug: audible glitch when switching AC-3 pass-through <-> none.
    Fix bug: mpeg stills not displayed.
    Detect audio stream type only after stream switch.
    Detect more h264 streams with leading zeros.
    VDPAU: support for studio levels added.
    Add support for skip chroma deinterlace to software deinterlacer.
    Type of software deinterlacer now configurable from setup menu.
    Mixer channel could be set through command line option.
    Fix bug: LFE moved to wrong position.
    Guard suspend/resume against multiple calls.
    Add support for AAC LATM audio streams.